--- a/index.html
+++ b/index.html
@@ -130,8 +130,8 @@ button:active {
 .operator:active { background-color: #777 !important; }
 .orange-btn:active { background-color: #ffb340 !important; }
 .blue-btn:active { background-color: #adcfff !important; }
-/* NEW: Green Active State */
-.green-btn:active { background-color: #248a3d !important; } 
+/* UPDATED: Darker Green Active State */
+.green-btn:active { background-color: #1e7e34 !important; } 
 
 /* BASE COLORS */
 .operator { background: #5c525c; }
@@ -139,8 +139,8 @@ button:active {
 .orange-btn { background: #ff9f0a; color: #202124; font-weight: 500; }
 .blue-btn { background: #8ab4f8; color: #202124; }
 
-/* NEW: Green Button Style */
-.green-btn { background: #34c759; color: #202124; }
+/* UPDATED: Deeper, Richer Green Button Style */
+.green-btn { background: #28a745; color: white; }
 
 </style>
 </head>
